tests/positive/Termination/ToEmpty.juvix
module ToEmpty;
  axiom A : Type;
  inductive Empty {};
  terminating
  f : A -> Empty;
  f x := f x;
end;
