tests/negative/MicroJuvix/Positivity/E6.juvix
module E6;

axiom A : Type;
inductive T (A : Type) {
c : (A -> (A -> (T A -> A))) -> T A;
};

end;
